--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,7 @@ h6 {
   list-style: none;
 }
 
-.nav-menu>ul>li {
+.nav-menu > ul > li {
   position: relative;
   white-space: nowrap;
 }
@@ -185,7 +185,6 @@ h6 {
 }
 
 @media (min-width: 992px) {
-
   .nav-menu a,
   .nav-menu a:focus {
     width: 56px;
@@ -201,7 +200,7 @@ h6 {
 .nav-menu a:hover,
 .nav-menu .active,
 .nav-menu .active:focus,
-.nav-menu li:hover>a {
+.nav-menu li:hover > a {
   color: #fff;
   background: #0563bb;
 }
@@ -209,18 +208,18 @@ h6 {
 .nav-menu a:hover span,
 .nav-menu .active span,
 .nav-menu .active:focus span,
-.nav-menu li:hover>a span {
+.nav-menu li:hover > a span {
   color: #fff;
 }
 
 .nav-menu a:hover,
-.nav-menu li:hover>a {
+.nav-menu li:hover > a {
   width: 100%;
   color: #fff;
 }
 
 .nav-menu a:hover span,
-.nav-menu li:hover>a span {
+.nav-menu li:hover > a span {
   display: block;
 }
 
@@ -423,6 +422,209 @@ section {
 
 .about .content p:last-child {
   margin-bottom: 0;
+}
+
+/*--------------------------------------------------------------
+# Experience
+--------------------------------------------------------------*/
+
+#experience .section-title {
+  margin-bottom: 20px;
+}
+
+#experience h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+#experience p {
+  font-size: 18px;
+  color: #6c757d;
+}
+
+.experience-timeline .timeline-item {
+  background: #fff;
+  border-radius: 8px;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.experience-timeline .timeline-item h4 {
+  font-size: 24px;
+  color: #333;
+}
+
+.experience-timeline .timeline-item span {
+  color: #007bff;
+}
+
+.experience-timeline .timeline-item ul {
+  list-style-type: disc;
+  padding-left: 20px;
+  margin-left: 20px;
+}
+
+.experience-timeline .timeline-item ul li {
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: #555;
+  text-align: justify;
+}
+
+@media (max-width: 768px) {
+  #experience .section-title h2 {
+    font-size: 28px;
+  }
+
+  #experience .section-title p {
+    font-size: 16px;
+  }
+
+  .experience-timeline .timeline-item h4 {
+    font-size: 20px;
+  }
+
+  .experience-timeline .timeline-item ul li {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 576px) {
+  #experience .section-title h2 {
+    font-size: 24px;
+  }
+
+  #experience .section-title p {
+    font-size: 14px;
+  }
+
+  .experience-timeline .timeline-item h4 {
+    font-size: 18px;
+  }
+
+  .experience-timeline .timeline-item ul li {
+    font-size: 12px;
+  }
+
+  .experience-timeline .timeline-item {
+    padding: 15px;
+  }
+}
+
+/*--------------------------------------------------------------
+# Services
+--------------------------------------------------------------*/
+
+.services .icon-box {
+  text-align: center;
+  padding: 70px 20px 80px 20px;
+  transition: all ease-in-out 0.3s;
+  background: #fff;
+  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
+}
+.services .icon-box .icon {
+  margin: 0 auto;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.services .icon-box .icon i {
+  font-size: 36px;
+  color: inherit;
+  transition: color 0.3s ease;
+  position: relative;
+}
+.services .icon-box .icon svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.services .icon-box .icon svg path {
+  transition: fill 0.3s ease;
+  fill: #f5f5f5;
+}
+.services .icon-box h4 {
+  font-weight: 600;
+  margin: 10px 0 15px 0;
+  font-size: 22px;
+}
+.services .icon-box h4 a {
+  color: #45505b;
+  transition: ease-in-out 0.3s;
+}
+.services .icon-box p {
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.services .icon-box:hover {
+  border-color: #fff;
+  box-shadow: 0px 0 35px 0 rgba(0, 0, 0, 0.08);
+}
+
+.services .iconbox-blue i {
+  color: #47aeff;
+}
+.services .iconbox-blue:hover .icon i {
+  color: #47aeff;
+}
+.services .iconbox-blue:hover .icon svg path {
+  fill: #e6f7ff;
+}
+
+.services .iconbox-orange i {
+  color: #ffa76e;
+}
+.services .iconbox-orange:hover .icon i {
+  color: #ffa76e;
+}
+.services .iconbox-orange:hover .icon svg path {
+  fill: #ffe8d4;
+}
+
+.services .iconbox-pink i {
+  color: #e80368;
+}
+.services .iconbox-pink:hover .icon i {
+  color: #e80368;
+}
+.services .iconbox-pink:hover .icon svg path {
+  fill: #ffedf2;
+}
+
+.services .iconbox-yellow i {
+  color: #ffbb2c;
+}
+.services .iconbox-yellow:hover .icon i {
+  color: #ffbb2c;
+}
+.services .iconbox-yellow:hover .icon svg path {
+  fill: #fff7e0;
+}
+
+.services .iconbox-red i {
+  color: #ff5828;
+}
+.services .iconbox-red:hover .icon i {
+  color: #ff5828;
+}
+.services .iconbox-red:hover .icon svg path {
+  fill: #ffebd9;
+}
+
+.services .iconbox-teal i {
+  color: #11dbcf;
+}
+.services .iconbox-teal:hover .icon i {
+  color: #11dbcf;
+}
+.services .iconbox-teal:hover .icon svg path {
+  fill: #e3fcfa;
 }
 
 /*--------------------------------------------------------------
@@ -746,7 +948,7 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .error-message br+br {
+.contact .php-email-form .error-message br + br {
   margin-top: 25px;
 }
 
@@ -785,8 +987,8 @@ section {
   font-size: 14px;
 }
 
-.contact .php-email-form input[type=text],
-.contact .php-email-form input[type=email] {
+.contact .php-email-form input[type="text"],
+.contact .php-email-form input[type="email"] {
   height: 44px;
 }
 
@@ -794,7 +996,7 @@ section {
   padding: 10px 12px;
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .php-email-form button[type="submit"] {
   background: #0563bb;
   border: 0;
   padding: 10px 35px;
@@ -803,7 +1005,7 @@ section {
   border-radius: 50px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .php-email-form button[type="submit"]:hover {
   background: #0678e3;
 }
 
